*8212* editor decision locale keys

--- a/pkp-lib/locale/en_US/submission.xml
+++ b/pkp-lib/locale/en_US/submission.xml
@@ -510,4 +510,17 @@
 	<message key="editor.submission.addStageParticipant.form.userGroupRequired">You must select a user group.</message>
 	<message key="editor.submission.addStageParticipant.form.userRequired">You must select a user for the specified user group.</message>
 
+	<!--  editor decisions -->
+	<message key="editor.submission.decision">Decision</message>
+	<message key="editor.submission.decision.accept">Accept Submission</message>
+	<message key="editor.submission.decision.requestRevisions">Request Revisions</message>
+	<message key="editor.submission.decision.resubmit">Resubmit for Review</message>
+	<message key="editor.submission.decision.decline">Decline Submission</message>
+	<message key="editor.submission.decision.sendToProduction">Send To Production</message>
+	<message key="editor.submission.decision.sendInternalReview">Send to Internal Review</message>
+	<message key="editor.submission.decision.sendExternalReview">Send to External Review</message>
+	<message key="editor.submission.decision.approveProofs">Approve Proofs</message>
+	<message key="editor.submission.decision.approveProofsDescription">The page proof file must be checked as approved to be made Available. Do you want to approve it?</message>
+	<message key="editor.submission.decision.disapproveProofsDescription">This file proof will no longer be publicly available for download or purchase. Do you want to disapprove it?</message>
+
 </locale>
