--- a/pkp-lib/locale/es_ES/grid.xml
+++ b/pkp-lib/locale/es_ES/grid.xml
@@ -65,6 +65,7 @@
 	<message key="grid.libraryFiles.review.title">Revisión de la Biblioteca</message>
 	<message key="grid.libraryFiles.production.title">Producción de la Biblioteca</message>
 	<message key="grid.libraryFiles.productionTemplate.title">Producción de plantillas de la Biblioteca</message>
+	<message key="grid.action.viewLibrary">Ver biblioteca de documentos</message>
 
 	<!-- SubmissionChecklist -->
 	<message key="grid.submissionChecklist.title">Lista de comprobación de la presentación</message>
