--- a/pkp-lib/locale/en_US/grid.xml
+++ b/pkp-lib/locale/en_US/grid.xml
@@ -95,6 +95,7 @@
 	<message key="grid.action.history">View History</message>
 	<message key="grid.action.unconsiderReview">This review is complete, but you may unconsider it</message>
 	<message key="grid.action.enable">Enable</message>
+	<message key="grid.action.bookInfo">Submission Info</message>
 	
 	<!--  grid task status -->
 	<message key="grid.task.status.completed">This task is completed</message>
