--- a/pkp-lib/locale/fr_CA/submission.xml
+++ b/pkp-lib/locale/fr_CA/submission.xml
@@ -401,4 +401,8 @@
 	<message key="editor.submission.decision.approveProofsDescription">Il faut indiquer que le fichier d'épreuve en page a été approuvé pour qu'il soit disponible. Souhaitez-vous l'approuver?</message>
 	<message key="editor.submission.decision.disapproveProofsDescription">Ce fichier d'épreuve ne pourra plus être téléchargé ou acheté par le public. Souhaitez-vous le désapprouver?</message>
 
+	<!-- workflow navigation keys -->
+	<message key="submission.currentStage">Étape actuelle</message>
+	<message key="submission.noActionRequired">Aucune action requise</message>
+	<message key="submission.actionNeeded">Action requise</message>
 </locale>
