--- a/pkp-lib/locale/en_US/submission.xml
+++ b/pkp-lib/locale/en_US/submission.xml
@@ -13,6 +13,13 @@
 <locale name="en_US" full_name = "English">
 	<!-- Author Submission -->
 	<message key="author.submit.submissionCitations">Provide a formatted list of references for works cited in this submission. Please separate individual references with a blank line.</message>
+	<message key="submission.submit.submissionComplete">Submission complete</message>
+	<message key="submission.submit.submissionCompleteThanks">Thank you for your interest in publishing with {$contextName}.</message>
+	<message key="submission.submit.whatNext">What Happens Next?</message>
+	<message key="submission.submit.whatNext.forNow">For now, you can:</message>
+	<message key="submission.submit.whatNext.review">Review this submission</message>
+	<message key="submission.submit.whatNext.create">Create a new submission</message>
+	<message key="submission.submit.whatNext.return">Return to your dashboard</message>
 
 	<!-- FIXME: move to meta-data plug-ins -->
 	<!-- messages used by meta-data filters -->
