--- a/pkp-lib/locale/de_DE/user.xml
+++ b/pkp-lib/locale/de_DE/user.xml
@@ -23,7 +23,7 @@
 	<message key="user.authorization.restrictedSiteAccess">Ihnen wurde der Zugang verweigert. Der Zugang zu dieser Site ist momentan beschränkt.</message>
 	<message key="user.authorization.roleBasedAccessDenied">Die aktuelle Rolle hat keinen Zugriff auf diese Operation.</message>
 	<message key="user.authorization.userGroupRequired">Sie müssen eine gültige Benutzer/innen-Gruppe setzen, um auf diese Operation zugreifen zu können.</message>
-	<message key="user.authorization.pressManagerRequired">Ein/e Benutzer/in mit einer Verlagsverwalter/innen-Rolle (z.B. Verlags- oder Produktionsredakteur/in) muss dem Arbeitsschritt hinzugefügt werden, bevor Sie weitermachen können.</message>
+	<message key="user.authorization.managerRequired">Ein/e Benutzer/in mit einer Verlagsverwalter/innen-Rolle (z.B. Verlags- oder Produktionsredakteur/in) muss dem Arbeitsschritt hinzugefügt werden, bevor Sie weitermachen können.</message>
 	<message key="user.biography">Angaben zum Lebenslauf</message>
 	<message key="user.biography.description">(z.B. Abteilung und Position)</message>
 	<message key="user.changeMyPassword">Mein Passwort ändern</message>
