--- a/pkp-lib/locale/pt_BR/user.xml
+++ b/pkp-lib/locale/pt_BR/user.xml
@@ -115,7 +115,7 @@
 	<message key="user.authorization.roleBasedAccessDenied">O papel atual não possui permissão para realizar esta operação.</message>
 	<message key="user.authorization.userGroupRequired">É necessário definir um grupo de usuário válido para acessar esta operação.</message>
 	<message key="user.accountInformation">Informações de cadastro</message>
-	<message key="user.authorization.pressManagerRequired">Um usuário com papel de Gerente de Imprensa (Editor de Imprensa ou de Produção, por exemplo) deve ser designado ao estágio antes de proceder.</message>
+	<message key="user.authorization.managerRequired">Um usuário com papel de Gerente de Imprensa (Editor de Imprensa ou de Produção, por exemplo) deve ser designado ao estágio antes de proceder.</message>
 	<message key="user.interests.description">(Separe interesses pressionando as teclas enter ou vírgula)</message>
 	<message key="user.group">Grupo de usuários</message>
 	<message key="user.hello">Olá,</message>
