*8212* Locale migrations / strip English from Spanish

--- a/pkp-lib/locale/el_GR/submission.xml
+++ b/pkp-lib/locale/el_GR/submission.xml
@@ -373,4 +373,5 @@
 	<message key="submission.nameRequired">Απαιτείται όνομα για αυτό το κομμάτι.</message>
 	<message key="submission.date.mmdd">MM-HH</message>
 	<message key="submission.date.yyyymmdd">EEEE-MM-HH</message>
+	<message key="reviewer.submission.reviewFiles">Αρχεία Αξιολόγησης</message>
 </locale>
