--- a/pkp-lib/locale/pt_BR/submission.xml
+++ b/pkp-lib/locale/pt_BR/submission.xml
@@ -383,4 +383,5 @@
 	<message key="submission.createRemote">Criar remoto</message>
 	<message key="submission.form.name">Informe um nome útil para o arquivo</message>
 	<message key="submission.form.replaceExisting">Substituindo um arquivo existente?</message>
+	<message key="reviewer.submission.reviewFiles">Arquivos da avaliação</message>
 </locale>
