--- a/pkp-lib/locale/en_US/editor.xml
+++ b/pkp-lib/locale/en_US/editor.xml
@@ -14,4 +14,5 @@
 	<message key="editor.review.notInitiated">The review process has not yet been initiated.</message>
 	<message key="editor.submission.externalReviewDescription">You are about to initiate an external review for this submission.  Files that are part of the submission are listed below and can be selected for review.</message>
 	<message key="editor.submission.review.reviewFilesDescription"><![CDATA[These are the files that can be selected for review, when adding reviewers in <span class="pkp_help_title">Reviewers</span>]]>.</message>
+	<message key="editor.submission.uploadSelectFiles">Upload/Select Files</message>
 </locale>
