--- a/pkp-lib/locale/pt_BR/common.xml
+++ b/pkp-lib/locale/pt_BR/common.xml
@@ -310,6 +310,7 @@
 	<message key="notification.unsubscribe">Cancelar assinatura de notificações</message>
 	<message key="notification.unsubscribeError">Ocorreu um erro ao tentar cancelar a assinatura. Verifique se o endereço de e-mail e senha estão corretos.</message>
 	<message key="notification.unsubscribeSuccess">Cancelamento de assinatura de notificações realizado com sucesso.</message>
+	<message key="notification.savedSubmissionMetadata">Metadados da submissão salvos.</message>
 	<message key="common.uploadFailed">Não foi possível enviar o arquivo. Por favor, tente novamente ou entre em contato com o administrador se o problema persistir.</message>
 	<message key="common.false">Falso</message>
 	<message key="common.ok">ok</message>
