*8212* Locale keys to PKP lib

--- a/pkp-lib/locale/fr_CA/editor.xml
+++ b/pkp-lib/locale/fr_CA/editor.xml
@@ -18,4 +18,5 @@
 	<message key="editor.submission.revisions">Révisions</message>
 	<message key="editor.submission.revisionsDescription">Les fichiers révisés de la soumission sont affichés ici. L'icône Ouvrir le dossier indique qui a téléchargé le fichier.</message>
 	<message key="editor.submission.review.reviewersDescription"><![CDATA[Utilisez <em>Ajouter un évaluateur</em> pour inviter des lecteurs à examiner les fichiers soumis. L'icône en forme de carnet indique qu'on a soumis un fichier pour l'évaluation. Celui-ci indiquera <em>Considéré</em> lorsqu'il aura été consulté. Si les évaluations sont en retard, l'icône d'une enveloppe rouge s'affichera à titre de rappel pour les évaluateurs.]]></message>	
+	<message key="editor.submission.addReviewer">Ajouter un évaluateur</message>
 </locale>
