--- a/pkp-lib/locale/en_US/editor.xml
+++ b/pkp-lib/locale/en_US/editor.xml
@@ -19,4 +19,6 @@
 	<message key="editor.submission.revisionsDescription">Revised submission files appear here, with the open folder icon indicating who uploaded the file.</message>
 	<message key="editor.submission.review.reviewersDescription"><![CDATA[Use <em>+Add Reviewer</em> to invite readers to review the submission files. The notebook icon indicates that a review has been submitted, which is then checked <em>Considered</em> after it has been consulted. When reviews are overdue, a red envelope icon appears for reminding reviewers.]]></message>
 	<message key="editor.submission.addReviewer">Add Reviewer</message>
+	<message key="editor.submission.fileList.includeAllStages">Include all files from all accessible workflow stages.</message>
+	<message key="editor.submission.review.currentFiles">Current Review Files For Round {$round}</message>
 </locale>
