--- a/pkp-lib/locale/fr_CA/editor.xml
+++ b/pkp-lib/locale/fr_CA/editor.xml
@@ -19,4 +19,6 @@
 	<message key="editor.submission.revisionsDescription">Les fichiers révisés de la soumission sont affichés ici. L'icône Ouvrir le dossier indique qui a téléchargé le fichier.</message>
 	<message key="editor.submission.review.reviewersDescription"><![CDATA[Utilisez <em>Ajouter un évaluateur</em> pour inviter des lecteurs à examiner les fichiers soumis. L'icône en forme de carnet indique qu'on a soumis un fichier pour l'évaluation. Celui-ci indiquera <em>Considéré</em> lorsqu'il aura été consulté. Si les évaluations sont en retard, l'icône d'une enveloppe rouge s'affichera à titre de rappel pour les évaluateurs.]]></message>	
 	<message key="editor.submission.addReviewer">Ajouter un évaluateur</message>
+	<message key="editor.submission.fileList.includeAllStages">Inclure tous les fichiers de toutes les étapes de production accessibles.</message>
+	<message key="editor.submission.review.currentFiles">{$round}e série de révision des fichiers.</message>
 </locale>
