--- a/pkp-lib/locale/fr_CA/editor.xml
+++ b/pkp-lib/locale/fr_CA/editor.xml
@@ -21,4 +21,5 @@
 	<message key="editor.submission.addReviewer">Ajouter un évaluateur</message>
 	<message key="editor.submission.fileList.includeAllStages">Inclure tous les fichiers de toutes les étapes de production accessibles.</message>
 	<message key="editor.submission.review.currentFiles">{$round}e série de révision des fichiers.</message>
+	<message key="editor.review.uploadRevisionToRound">Télécharger le fichier évalué </message>
 </locale>
