--- a/pkp-lib/locale/fr_CA/submission.xml
+++ b/pkp-lib/locale/fr_CA/submission.xml
@@ -406,4 +406,5 @@
 	<message key="submission.noActionRequired">Aucune action requise</message>
 	<message key="submission.actionNeeded">Action requise</message>
 	<message key="reviewer.submission.reviewFiles">Fichiers d'évaluation</message>
+	<message key="submission.submit.currentFile">Fichier en cours</message>
 </locale>
