--- a/ops/locale/en_US/locale.xml
+++ b/ops/locale/en_US/locale.xml
@@ -269,7 +269,7 @@
 	 *
 	-->
 	<message key="submission.event.general.defaultEvent">Submission event</message>
-	<message key="submission.event.general.articleSubmitted">Article submitted</message>
+	<message key="submission.event.submissionSubmitted">Article submitted</message>
 	<message key="submission.event.general.issueScheduled">Submission sent to issue scheduling queue</message>
 	<message key="submission.event.general.issueAssigned">Submission assigned to issue</message>
 	<message key="submission.event.general.articlePublished">Article published</message>
