--- a/ops/locale/es_ES/locale.xml
+++ b/ops/locale/es_ES/locale.xml
@@ -210,7 +210,7 @@
 	<message key="submission.event.logLevel.error">Error</message>
 	
 	<message key="submission.event.general.defaultEvent">Evento de envío</message>
-	<message key="submission.event.general.articleSubmitted">Artículo enviado</message>
+	<message key="submission.event.submissionSubmitted">Artículo enviado</message>
 	<message key="submission.event.general.issueScheduled">Envío agendado para publicación</message>
 	<message key="submission.event.general.issueAssigned">Envío asignado a número</message>
 	<message key="submission.event.general.articlePublished">Artículo publicado</message>
