--- a/ops/locale/nl_NL/locale.xml
+++ b/ops/locale/nl_NL/locale.xml
@@ -208,7 +208,7 @@
 	 *
 	-->
 	<message key="submission.event.general.defaultEvent">Inzending</message>
-	<message key="submission.event.general.articleSubmitted">Artikel ingezonden</message>
+	<message key="submission.event.submissionSubmitted">Artikel ingezonden</message>
 	<message key="submission.event.general.issueScheduled">Inzending in nummer-wachtrij geplaatst.</message>
 	<message key="submission.event.general.issueAssigned">Inzending toegekend aan nummer</message>
 	<message key="submission.event.general.articlePublished">Artikel gepubliceerd</message>
