--- a/ops/locale/zh_TW/locale.xml
+++ b/ops/locale/zh_TW/locale.xml
@@ -219,7 +219,7 @@
 	<message key="submission.event.logLevel.error">錯誤</message>
 	
 	<message key="submission.event.general.defaultEvent">投稿事件</message>
-	<message key="submission.event.general.articleSubmitted">投稿稿件</message>
+	<message key="submission.event.submissionSubmitted">投稿稿件</message>
 	<message key="submission.event.general.issueScheduled">已送到期數排序的稿件</message>
 	<message key="submission.event.general.issueAssigned">已指派給某期的稿件</message>
 	<message key="submission.event.general.articlePublished">已刊出的論文</message>
