--- a/ojs/locale/da_DK/locale.xml
+++ b/ojs/locale/da_DK/locale.xml
@@ -208,7 +208,7 @@
 	 *
 	-->
 	<message key="submission.event.general.defaultEvent">Manuskripthændelse</message>
-	<message key="submission.event.general.articleSubmitted">Artiklen er fremsendt</message>
+	<message key="submission.event.submissionSubmitted">Artiklen er fremsendt</message>
 	<message key="submission.event.general.issueScheduled">Manuskriptet er sendt til køen for udgaveplanlægning</message>
 	<message key="submission.event.general.issueAssigned">Manuskriptet er tildelt udgaven</message>
 	<message key="submission.event.general.articlePublished">Artiklen er publiceret</message>
