--- a/ojs/locale/fa_IR/locale.xml
+++ b/ojs/locale/fa_IR/locale.xml
@@ -168,7 +168,7 @@
 	<message key="submission.event.logLevel.warning">اخطار</message>
 	<message key="submission.event.logLevel.error">خطا</message>
 	<message key="submission.event.general.defaultEvent">واقعه پیش فرض</message>
-	<message key="submission.event.general.articleSubmitted">مقاله سابمیت شد.</message>
+	<message key="submission.event.submissionSubmitted">مقاله سابمیت شد.</message>
 	<message key="submission.event.general.issueScheduled">سابمیشن در نوبت چاپ قرار گرفت.</message>
 	<message key="submission.event.general.issueAssigned">سابمیشن در نوبت چاپ قرار گرفت.</message>
 	<message key="submission.event.general.articlePublished">مقاله چاپ شد</message>
