--- a/ojs/locale/gl_ES/locale.xml
+++ b/ojs/locale/gl_ES/locale.xml
@@ -210,7 +210,7 @@
 	<message key="submission.event.logLevel.error">Erro</message>
 	
 	<message key="submission.event.general.defaultEvent">Evento de envío</message>
-	<message key="submission.event.general.articleSubmitted">Artigo enviado</message>
+	<message key="submission.event.submissionSubmitted">Artigo enviado</message>
 	<message key="submission.event.general.issueScheduled">Envío axendado para publicación</message>
 	<message key="submission.event.general.issueAssigned">Envío asignado a número</message>
 	<message key="submission.event.general.articlePublished">Artigo publicado</message>
