--- a/ojs/locale/ru_RU/locale.xml
+++ b/ojs/locale/ru_RU/locale.xml
@@ -258,7 +258,7 @@
 	 *
 	-->
 	<message key="submission.event.general.defaultEvent">Действия</message>
-	<message key="submission.event.general.articleSubmitted">Статья прислана</message>
+	<message key="submission.event.submissionSubmitted">Статья прислана</message>
 	<message key="submission.event.general.issueScheduled">Статья запланирована</message>
 
 	<message key="submission.event.general.issueAssigned">Статья назначена к выпуску</message>
