--- a/ojs/locale/uk_UA/locale.xml
+++ b/ojs/locale/uk_UA/locale.xml
@@ -276,7 +276,7 @@
         *
        -->
        <message key="submission.event.general.defaultEvent">Подія з поданням</message>
-       <message key="submission.event.general.articleSubmitted">Стаття надіслана</message>
+       <message key="submission.event.submissionSubmitted">Стаття надіслана</message>
        <message key="submission.event.general.issueScheduled">Подання включене до графіку публікації</message>
        <message key="submission.event.general.issueAssigned">Подання включене до випуску</message>
        <message key="submission.event.general.articlePublished">Стаття опублікована</message>
